Changed contactform header

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <section class="form">
-      <h1 class="header">Contact us</h1>
+      <h1 class="header">Contact form</h1>
       <h2 class="second__header">Well get back to you as soon as we can</h2>
 
       <div>
