--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <body>
     <!-- Header -->
 
-    <header class="header">
+    <header class="header__">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="95"
         height="24"
         viewBox="0 0 95 24"
         fill="none"
-        class="header__logo"
+        class="header__img"
       >
         <g clip-path="url(#clip0_1_20)">
           <path
@@ -76,8 +76,8 @@
 
     <!-- Hero -->
 
-    <section class="hero">
-      <h1 class="hero__headline">Download our App</h1>
+    <section class="hero__">
+      <h1 class="hero__header">Download our App</h1>
       <h2 class="hero__text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel
         eleifend diam, tempus accumsan neque. Praesent quis dolor.
@@ -132,46 +132,46 @@
 
     <!-- Cards -->
 
-    <section class="cards">
-      <h2 class="cards__headline">Our products</h2>
-      <article class="cards--small card__1">
-        <img src="Image-outline.png" class="cards__img" />
-        <h4 class="cards--small--header">Green cap</h4>
-        <h5 class="cards--small--text">US&dollar;29</h5>
+    <section class="cards__">
+      <h2 class="cards__header">Our products</h2>
+      <article class="cards__small">
+        <img src="Image-outline.png" class="cards__small--img" />
+        <h4 class="cards__small--header">Green cap</h4>
+        <h5 class="cards__small--text">US&dollar;29</h5>
       </article>
-      <article class="cards--small card__2">
-        <img src="Image-outline.png" class="cards__img" />
-        <h4 class="cards--small--header">Green cap</h4>
-        <h5 class="cards--small--text">US&dollar;29</h5>
+      <article class="cards__small">
+        <img src="Image-outline.png" class="cards__small--img" />
+        <h4 class="cards__small--header">Green cap</h4>
+        <h5 class="cards__small--text">US&dollar;29</h5>
       </article>
-      <article class="cards--small card__3">
-        <img src="Image-outline.png" class="cards__img" />
-        <h4 class="cards--small--header">Green cap</h4>
-        <h5 class="cards--small--text">US&dollar;29</h5>
+      <article class="cards__small">
+        <img src="Image-outline.png" class="cards__small--img" />
+        <h4 class="cards__small--header">Green cap</h4>
+        <h5 class="cards__small--text">US&dollar;29</h5>
       </article>
-      <article class="cards--small card__4">
-        <img src="Image-outline.png" class="cards__img" />
-        <h4 class="cards--small--header">Green cap</h4>
-        <h5 class="cards--small--text">US&dollar;29</h5>
+      <article class="cards__small">
+        <img src="Image-outline.png" class="cards__small--img" />
+        <h4 class="cards__small--header">Green cap</h4>
+        <h5 class="cards__small--text">US&dollar;29</h5>
       </article>
-      <article class="cards--large card__5">
-        <h3 class="cards--large--header">COLLECTION</h3>
-        <h4 class="cards--large--text">Summer 2021</h4>
-        <button class="cards--large--button">Check It Out</button>
+      <article class="cards__large cards__large--media">
+        <h3 class="cards__large--header">COLLECTION</h3>
+        <h4 class="cards__large--text">Summer 2021</h4>
+        <button class="cards__large--button">Check It Out</button>
       </article>
-      <article class="cards--large card__6">
-        <h3 class="cards--large--header">COLLECTION</h3>
-        <h4 class="cards--large--text">Summer 2021</h4>
-        <button class="cards--large--button">Check It Out</button>
+      <article class="cards__large">
+        <h3 class="cards__large--header">COLLECTION</h3>
+        <h4 class="cards__large--text">Summer 2021</h4>
+        <button class="cards__large--button">Check It Out</button>
       </article>
     </section>
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <footer class="footer__">
       <section class="footer__box">
         <h3 class="footer__box--header">Contact us</h3>
-        <h4 class="footer__box--header2">We'd love to hear from you</h4>
+        <h4 class="footer__box--textlarge">We'd love to hear from you</h4>
         <p class="footer__box--text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
           vel eleifend diam, tempus accumsan neque.
@@ -243,7 +243,7 @@
             <p>info@zocom.se</p>
           </li>
           <li>
-            <button class="contact__button" onclick="openWin()">
+            <button class="footer__box--button" onclick="openWin()">
               Contact us
             </button>
             <script>
