--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,16 @@
     <title>Contact us</title>
   </head>
   <body>
+    <!-- HEADER -->
+
     <section class="contactform__">
       <h1 class="contactform__header">Contact form</h1>
       <h2 class="contactform__text">Well get back to you as soon as we can</h2>
 
+      <!-- CONTACTFORM -->
+
       <div class="contactform__question--layout">
+        <!-- QUESTION ONE -->
         <article class="contactform__question">
           <h3 class="contactform__question--text">First name</h3>
           <input
@@ -26,7 +31,7 @@
             name="name"
           />
         </article>
-
+        <!-- QUESTION TWO -->
         <article class="contactform__question">
           <h3 class="contactform__question--text">Last name</h3>
           <input
@@ -36,6 +41,8 @@
           />
         </article>
       </div>
+
+      <!-- QUESTION THREE -->
       <article class="contactform__question">
         <h3 class="contactform__question--text">Your e-mail</h3>
         <input
@@ -45,6 +52,25 @@
         />
       </article>
 
+      <!-- QUESTION FOUR -->
+      <article class="contactform__question">
+        <h3 class="contactform__question--text">Your adress</h3>
+        <input
+          type="text"
+          class="contactform__question--mailinput"
+          name="Adress"
+        />
+      </article>
+      <!-- QUESTION FIVE -->
+      <article class="contactform__question">
+        <h3 class="contactform__question--text">Your phone number</h3>
+        <input
+          type="text"
+          class="contactform__question--mailinput"
+          name="Adress"
+        />
+      </article>
+      <!-- QUESTION SIX -->
       <article class="contactform__question">
         <h3 class="contactform__question--text">Message</h3>
         <input
@@ -53,6 +79,7 @@
           name="message"
         />
       </article>
+      <!-- SEND BUTTON -->
       <button
         class="contactform__button"
         type="button"
