added contactform quetsions

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <input
           type="text"
           class="contactform__question--mailinput"
-          name="Adress"
+          name="mail"
         />
       </article>
 
@@ -57,8 +57,8 @@
         <h3 class="contactform__question--text">Your adress</h3>
         <input
           type="text"
-          class="contactform__question--mailinput"
-          name="Adress"
+          class="contactform__question--adressinput"
+          name="adress"
         />
       </article>
       <!-- QUESTION FIVE -->
@@ -66,8 +66,8 @@
         <h3 class="contactform__question--text">Your phone number</h3>
         <input
           type="text"
-          class="contactform__question--mailinput"
-          name="Adress"
+          class="contactform__question--phoneinput"
+          name="phone"
         />
       </article>
       <!-- QUESTION SIX -->
