Changed carditem text

--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
       </article>
       <article class="cards__small">
         <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Green cap</h4>
-        <h5 class="cards__small--text">US&dollar;29</h5>
+        <h4 class="cards__small--header">Zara shirt</h4>
+        <h5 class="cards__small--text">US&dollar;19.90</h5>
       </article>
       <article class="cards__small">
         <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Green cap</h4>
-        <h5 class="cards__small--text">US&dollar;29</h5>
+        <h4 class="cards__small--header">Nike Air</h4>
+        <h5 class="cards__small--text">US&dollar;34</h5>
       </article>
       <article class="cards__small">
         <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Green cap</h4>
-        <h5 class="cards__small--text">US&dollar;29</h5>
+        <h4 class="cards__small--header">Nerd tshirt</h4>
+        <h5 class="cards__small--text">US&dollar;9.99</h5>
       </article>
       <article class="cards__large cards__large--media">
         <h3 class="cards__large--header">COLLECTION</h3>
