changed media querys

--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
         <h4 class="cards__small--header">Nerd tshirt</h4>
         <h5 class="cards__small--text">US&dollar;9.99</h5>
       </article>
-      <article class="cards__large cards__large--media">
+      <article class="cards__large cards__large--first">
         <h3 class="cards__large--header">COLLECTION</h3>
         <h4 class="cards__large--text">Summer 2021</h4>
         <button class="cards__large--button">Check It Out</button>
       </article>
-      <article class="cards__large">
+      <article class="cards__large cards__large--last">
         <h3 class="cards__large--header">COLLECTION</h3>
         <h4 class="cards__large--text">Summer 2021</h4>
         <button class="cards__large--button">Check It Out</button>
