--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Ubuntu&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;700&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
@@ -21,14 +15,14 @@
   <body>
     <!-- Header -->
 
-    <header class="header__">
+    <header class="header">
       <svg
+        class="header__logo"
         xmlns="http://www.w3.org/2000/svg"
         width="95"
         height="24"
         viewBox="0 0 95 24"
         fill="none"
-        class="header__img"
       >
         <g clip-path="url(#clip0_1_20)">
           <path
@@ -50,16 +44,16 @@
           </clipPath>
         </defs>
       </svg>
-      <nav class="header__menu">
-        <a href="#" class="header__menu__item">Home</a>
-        <a href="#" class="header__menu__item">How It Works</a>
-        <a href="#" class="header__menu__item">Features</a>
-        <a href="#" class="header__menu__item">Press</a>
-        <a href="#" class="header__menu__item">Pricing</a>
-        <a href="#" class="header__menu__item">Contact</a>
+      <nav class="header__menu header__menu--hidden">
+        <a href="#" class="header__menu--item">Home</a>
+        <a href="#" class="header__menu--item">How It Works</a>
+        <a href="#" class="header__menu--item">Features</a>
+        <a href="#" class="header__menu--item">Press</a>
+        <a href="#" class="header__menu--item">Pricing</a>
+        <a href="#" class="header__menu--item">Contact</a>
       </nav>
-      <button class="header__button">Get a quote</button>
-      <nav class="header__hamburger">
+      <button class="header__button header__button--hidden">Get a quote</button>
+      <nav class="header__hamburger header__hamburger--hidden">
         <svg
           width="30"
           height="16"
@@ -76,13 +70,15 @@
 
     <!-- Hero -->
 
-    <section class="hero__">
-      <h1 class="hero__header">Download our App</h1>
-      <h2 class="hero__text">
+    <section class="hero">
+      <h1 class="hero__heading hero__heading--small-no-animation">
+        Download our App
+      </h1>
+      <h2 class="hero__text hero__text--small">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel
         eleifend diam, tempus accumsan neque. Praesent quis dolor.
       </h2>
-      <nav class="hero__buttons">
+      <nav class="hero__buttons hero__buttons--no-animation">
         <a href="#">
           <img src="App-store-button.png" />
         </a>
@@ -91,12 +87,12 @@
         </a>
       </nav>
       <svg
+        class="hero__img .hero__img--small-no-animation"
         width="372"
         height="338"
         viewBox="0 0 372 338"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
-        class="hero__img"
       >
         <path
           d="M4 44C4 20.2518 23.2518 1 47 1H325C348.748 1 368 20.2518 368 44V356H4V44Z"
@@ -132,59 +128,73 @@
 
     <!-- Cards -->
 
-    <section class="cards__">
-      <h2 class="cards__header">Our products</h2>
-      <article class="cards__small">
-        <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Green cap</h4>
-        <h5 class="cards__small--text">US&dollar;29</h5>
+    <section class="cards cards--compressed">
+      <h2 class="cards__heading cards__heading--small">Our products</h2>
+      <article class="smallcard smallcard--small">
+        <img
+          src="Image-outline.png"
+          class="smallcard__img smallcard__img--small"
+        />
+        <h4 class="smallcard__title">Green cap</h4>
+        <h5 class="smallcard__text">US&dollar;29</h5>
       </article>
-      <article class="cards__small">
-        <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Zara shirt</h4>
-        <h5 class="cards__small--text">US&dollar;19.90</h5>
+      <article class="smallcard smallcard--small">
+        <img
+          src="Image-outline.png"
+          class="smallcard__img smallcard__img--small"
+        />
+        <h4 class="smallcard__title">Zara shirt</h4>
+        <h5 class="smallcard__text">US&dollar;19.90</h5>
       </article>
-      <article class="cards__small">
-        <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Nike Air</h4>
-        <h5 class="cards__small--text">US&dollar;34</h5>
+      <article class="smallcard smallcard--small">
+        <img
+          src="Image-outline.png"
+          class="smallcard__img smallcard__img--small"
+        />
+        <h4 class="smallcard__title">Nike Air</h4>
+        <h5 class="smallcard__text">US&dollar;34</h5>
       </article>
-      <article class="cards__small">
-        <img src="Image-outline.png" class="cards__small--img" />
-        <h4 class="cards__small--header">Nerd tshirt</h4>
-        <h5 class="cards__small--text">US&dollar;9.99</h5>
+      <article class="smallcard smallcard--small">
+        <img
+          src="Image-outline.png"
+          class="smallcard__img smallcard__img--small"
+        />
+        <h4 class="smallcard__title">Nerd tshirt</h4>
+        <h5 class="smallcard__text">US&dollar;9.99</h5>
       </article>
-      <article class="cards__large cards__large--first">
-        <h3 class="cards__large--header">COLLECTION</h3>
-        <h4 class="cards__large--text">Summer 2021</h4>
-        <button class="cards__large--button">Check It Out</button>
+      <article class="largecard largecard--small largecard--margintop">
+        <h3 class="largecard__title">COLLECTION</h3>
+        <h4 class="largecard__text">Summer 2021</h4>
+        <button class="largecard__button">Check It Out</button>
       </article>
-      <article class="cards__large cards__large--last">
-        <h3 class="cards__large--header">COLLECTION</h3>
-        <h4 class="cards__large--text">Summer 2021</h4>
-        <button class="cards__large--button">Check It Out</button>
+      <article class="largecard largecard--small">
+        <h3 class="largecard__title">COLLECTION</h3>
+        <h4 class="largecard__text">Summer 2021</h4>
+        <button class="largecard__button">Check It Out</button>
       </article>
     </section>
 
     <!-- Footer -->
 
-    <footer class="footer__">
-      <section class="footer__box">
-        <h3 class="footer__box--header">Contact us</h3>
-        <h4 class="footer__box--textlarge">We'd love to hear from you</h4>
-        <p class="footer__box--text">
+    <footer class="footer footer--small">
+      <section class="footerbox footerbox--small">
+        <h3 class="footerbox__heading footerbox__heading--small">Contact us</h3>
+        <h4 class="footerbox__title footerbox__title--small">
+          We'd love to hear from you
+        </h4>
+        <p class="footerbox__text footerbox__text--small">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
           vel eleifend diam, tempus accumsan neque.
         </p>
         <ul>
-          <li class="footer__box--contact">
+          <li class="footerbox__contacts">
             <svg
               width="24"
               height="24"
               viewBox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
-              class="footer__icon"
+              class="footerbox__contacts--icon"
             >
               <path
                 d="M21 3L3 11.2566H12.375C12.4745 11.2566 12.5698 11.2961 12.6402 11.3664C12.7105 11.4367 12.75 11.5321 12.75 11.6316V21L21 3Z"
@@ -194,17 +204,17 @@
                 stroke-linejoin="round"
               />
             </svg>
-            <p class="">Vallgatan 25, Göteborg</p>
+            <p class="footerbox__contacts--info">Vallgatan 25, Göteborg</p>
           </li>
 
-          <li class="footer__box--contact">
+          <li class="footerbox__contacts">
             <svg
               width="24"
               height="24"
               viewBox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
-              class="footer__icon"
+              class="footerbox__contacts--icon"
             >
               <path
                 d="M21.1406 17.5312C20.3963 16.7812 18.5934 15.6867 17.7188 15.2456C16.5797 14.6718 16.4859 14.6249 15.5906 15.2901C14.9934 15.734 14.5964 16.1306 13.8975 15.9815C13.1986 15.8324 11.6799 14.992 10.35 13.6663C9.02016 12.3407 8.13094 10.7779 7.98141 10.0813C7.83188 9.38478 8.235 8.99244 8.67469 8.39385C9.29438 7.5501 9.2475 7.40947 8.71782 6.27041C8.30485 5.38447 7.17844 3.59853 6.42563 2.85791C5.62032 2.06244 5.62032 2.20306 5.10141 2.41869C4.67896 2.59643 4.27367 2.81249 3.89063 3.06416C3.14063 3.56244 2.72438 3.97635 2.43328 4.59838C2.14219 5.22041 2.01141 6.67869 3.51469 9.40963C5.01797 12.1406 6.07266 13.537 8.25563 15.7138C10.4386 17.8907 12.1172 19.0612 14.5711 20.4374C17.6067 22.1376 18.7711 21.8062 19.395 21.5156C20.0189 21.2249 20.4347 20.8124 20.9339 20.0624C21.1862 19.68 21.4028 19.2752 21.5808 18.8531C21.7969 18.336 21.9375 18.336 21.1406 17.5312Z"
@@ -213,17 +223,17 @@
                 stroke-miterlimit="10"
               />
             </svg>
-            <p>031 123 456 7</p>
+            <p class="footerbox__contacts--info">031 123 456 7</p>
           </li>
 
-          <li class="footer__box--contact">
+          <li class="footerbox__contacts">
             <svg
               width="24"
               height="24"
               viewBox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
-              class="footer__icon"
+              class="footerbox__contacts--icon"
             >
               <path
                 d="M19.875 4.5H4.125C3.08947 4.5 2.25 5.33947 2.25 6.375V17.625C2.25 18.6605 3.08947 19.5 4.125 19.5H19.875C20.9105 19.5 21.75 18.6605 21.75 17.625V6.375C21.75 5.33947 20.9105 4.5 19.875 4.5Z"
@@ -240,10 +250,13 @@
                 stroke-linejoin="round"
               />
             </svg>
-            <p>info@zocom.se</p>
+            <p class="footerbox__contacts--info">info@zocom.se</p>
           </li>
           <li>
-            <button class="footer__box--button" onclick="openWin()">
+            <button
+              class="footerbox__button footerbox__button--hidden"
+              onclick="openWin()"
+            >
               Contact us
             </button>
             <script>
