--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <h4 class="smallcard__title">Nerd tshirt</h4>
         <h5 class="smallcard__text">US&dollar;9.99</h5>
       </article>
-      <article class="largecard largecard--small largecard--margintop">
+      <article class="largecard largecard--small largecard--alignment">
         <h3 class="largecard__title">COLLECTION</h3>
         <h4 class="largecard__text">Summer 2021</h4>
         <button class="largecard__button">Check It Out</button>
